--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,5 +1,6 @@
 <header role="banner">
   <nav class="wrapper">
+    <h1>Supervisual</h1>
     <a href="/">Home</a>
     <a href="/other/">Another page</a>
     <a href="/template/">A template page</a>
