--- a/_imports/footer.html
+++ b/_imports/footer.html
@@ -1,15 +1,12 @@
 <footer role="contentinfo">
   <div class="wrapper">
-    <span>Made with <a href="https://sergey.cool">Sergey</a> ❤️</span>
+    <span>			<b>Archive</b>
+			<select onChange="window.location.href=this.value">
+			    <option value="/archive.html">Previous Issues</option>
+    			<option value="/">Issue 02</option>
+    			<option value="/archive.html">Issue 01</option>
+			</select></span>
 
-    <a
-      href="https://app.netlify.com/start/deploy?repository=https://github.com/trys/sergey-netlify"
-      class="deploy"
-    >
-      <img
-        src="https://www.netlify.com/img/deploy/button.svg"
-        alt="Deploy to Netlify"
-      />
-    </a>
+		<a href="MAILTO:" style="text-align:center;"><figcaption>Interested in working together?</figcaption></a>
   </div>
 </footer>
