--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <body>
     <sergey-import src="header" />
 
-    <main class="wrapper">
+    <div class="container">
       <p>👋 Welcome to the Sergey example website!</p>
       <p>This page is located at: <code>/index.html</code></p>
       <p>Check out <a href="https://sergey.cool/">sergey.cool</a> for documentation and tips. If you spot any problems, or have feature requests, please <a href="https://github.com/trys/sergey/issues">file an issue</a> on the <a href="https://github.com/trys/sergey">GitHub repository</a>.</p>
-    </main>
+    </div>
 
     <sergey-import src="footer" />
   </body>
