--- a/_imports/header.html
+++ b/_imports/header.html
@@ -1,7 +1,7 @@
 <header role="banner">
   <nav class="wrapper">
-    <a href="/">Home</a>
-    <a href="/other/">Another page</a>
-    <a href="/template/">A template page</a>
+    <a href="/"><h2>Supervisual</h2></a>
+    <a href="/other/">Work</a>
+    <a href="/template/">Newsletters</a>
   </nav>
 </header>
